# server.js
@@ -19,6 +19,7 @@ const { errorHandler, notFoundHandler } = require("./middleware/errorHandler");
 
 const app = express();
 const usersRoutes = require("./routes/users.routes");
+const providersRoutes = require("./routes/providers.routes");
 
 app.use(cors());
 app.use(
@@ -58,6 +59,7 @@ app.get("/api-docs", swaggerSetup);
 app.use("/api-docs", ...swaggerUi.serve, swaggerSetup);
 app.use("/api/auth", authRoutes);
 app.use("/api/users", usersRoutes);
+app.use("/api/providers", providersRoutes);
 
 app.use(notFoundHandler);
 app.use(errorHandler);
